# libobjc2

./: CMakeLists.txt  libobjc.pc.in  objc-config.cmake.in
CMake/: DetectArch.cmake
Headers/: CMakeLists.txt
Headers/objc/: CMakeLists.txt
Source/: CMakeLists.txt  arc.mm  selector_table.cc  sendmsg2.c  visibility.h
